--- a/app/src/main/res/layout/layout_users.xml
+++ b/app/src/main/res/layout/layout_users.xml
@@ -22,6 +22,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Details" />
+
+        <TextView
+            android:id="@+id/friendFlagTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="?" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
