--- a/app/src/main/res/layout/layout_users.xml
+++ b/app/src/main/res/layout/layout_users.xml
@@ -12,16 +12,10 @@
         android:padding="3dp">
 
         <TextView
-            android:id="@+id/userFirstName"
+            android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name" />
-
-        <TextView
-            android:id="@+id/userLastName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Details" />
 
         <TextView
             android:id="@+id/friendFlagTextView"
