--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -59,6 +59,14 @@
             android:hint="Password"
             android:inputType="textPassword" />
 
+        <ImageView
+            android:id="@+id/signUpPhotoImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />
+
         <Button
             android:id="@+id/submitChangesButton"
             android:layout_width="match_parent"
