--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -36,6 +36,12 @@
             android:hint="Password"
             android:inputType="textPassword" />
 
+        <Switch
+            android:id="@+id/privateSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Private" />
+
         <Button
             android:id="@+id/submitChangesButton"
             android:layout_width="match_parent"
